Moved the style outside of the html

--- a/index.html
+++ b/index.html
@@ -5,27 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Dad!</title>
-    <style>
-        html,
-        body {
-            height: 100%;
-            overflow: hidden;
-            margin: 0;
-        }
-        .text-overlay {
-            color: white;
-            position: absolute;
-            font-family:'Courier New', Courier, monospace;
-            left: 37%;
-            top: 75%;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class='text-overlay'>
         <h1>Happy Birthday Dad!!!</h1>
         <p>I hope you enjoy this little gallery of your work</p>
+        <a href="./card.html" class="to-card">See Card</a>
     </div>
     <script src="third_party/three.min.js"></script>
     <script src="third_party/OrbitControls.js"></script>
