--- a/card.html
+++ b/card.html
@@ -6,36 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Dad!</title>
+    <link rel="stylesheet" href="card.css">
     <style>
-        body {
-            background-color: black;
-
-        }
-
-        .card {
-            background-color: rgb(199, 199, 199);
-            width: 50%;
-            height: 80vh;
-            margin: 20px auto;
-            border-radius: 15px;
-            padding: 40px;
-            font-family: 'Courier New', Courier, monospace;
-
-        }
-
-        h1 {
-            margin: 0;
-            font-weight: 500;
-        }
-
-        p {
-            font-size: large;
-        }
-
-        h2 {
-            font-weight: 500;
-
-        }
+       
 
     </style>
 </head>
@@ -65,6 +38,8 @@
             Lovingly, <br/> Emma
         </h2>
         
+        <a href="./" class="to-home">Return to Gallery</a>
+
     </div>
 
 
